# video-mcp

./: .gitattributes  .gitignore  AGENTS.md  README.md  conftest.py  pyproject.toml  pyrightconfig.json
src/: exceptions.py  server.py
src/config/: constants.py  dotenv.py  paths.py  settings.py
src/models/: __init__.py  input_models.py
src/providers/: __init__.py  base.py  grok_provider.py  registry.py  selector.py  sora_provider.py  veo_provider.py
src/services/: logging_config.py
tests/: test_providers.py  test_server.py
